# cpp-sims

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
C++ Simulators/: main.cpp  window_main.cpp
C++ Simulators.xcodeproj/: project.pbxproj
app/: app_state.h  application.cpp  application.h  console_runner.cpp  console_runner.h  control_binding.h  control_binding_formatter.cpp  control_binding_formatter.h  engine_shell_session.cpp  engine_shell_session.h  input_state.h  isimulator_scene.h  preview_storyboard.cpp  preview_storyboard.h  runtime_command_result.h  runtime_controller.cpp  runtime_controller.h  runtime_paths.cpp  runtime_paths.h  scene_factory.cpp  scene_factory.h  scene_input_router.cpp  scene_input_router.h  scene_status_formatter.cpp  scene_status_formatter.h  shell_command_catalog.cpp  shell_command_catalog.h  shell_presenter.cpp  shell_presenter.h  shell_screen.h  shell_text_formatter.cpp  shell_text_formatter.h  simulator_id.h  simulator_metadata.h  simulator_registry.cpp  simulator_registry.h  window_shell_runner.cpp  window_shell_runner.h
assets/apollo/effects/: README.md
assets/demos/: README.md  apollo11_lander_keyframe.ppm  apollo11_lander_loop.preview.txt  chess_keyframe.ppm  chess_loop.preview.txt  howitzer_keyframe.ppm  howitzer_loop.preview.txt  orbital_keyframe.ppm  orbital_loop.preview.txt
assets/howitzer/effects/: README.md
assets/metadata/: simulator-manifest.md
docs/: github-releases.md  macos-packaging.md  merge-plan.md  release-checklist.md  shared-file-cleanup.md
engine/: engine_shell_renderer.cpp  engine_shell_renderer.h  image_sequence.cpp  image_sequence.h  preview_storyboard_renderer.cpp  preview_storyboard_renderer.h  shell_layout.cpp  shell_layout.h  shell_layout_builder.h
scripts/: apply_macos_file_icon.sh  package_macos_app.sh  package_macos_dmg.sh  publish_github_release.sh
simulators/: README.md
simulators/chess/: chess_legacy_amalgam.cpp  chess_legacy_bridge.h  chess_legacy_gui_amalgam.cpp  chess_legacy_rename.h  chess_legacy_unrename.h  chess_scene.cpp  chess_scene.h
simulators/chess/legacy/: Lab05.sln  Lab05.vcxproj  board.cpp  board.h  chess.cpp  legacy_draw_stub.cpp  move.cpp  move.h  piece.cpp  piece.h  pieceBishop.cpp  pieceBishop.h  pieceKing.cpp  pieceKing.h  pieceKnight.cpp  pieceKnight.h  piecePawn.cpp  piecePawn.h  pieceQueen.cpp  pieceQueen.h  pieceRook.cpp  pieceRook.h  pieceSpace.h  pieceType.h  position.cpp  position.h  test.cpp  testBishop.cpp  testBoard.cpp  testBoard.h  testKing.cpp  testKing.h  testKnight.cpp  testKnight.h  testMove.cpp  testMove.h  testPawn.cpp  testPawn.h  testPiece.cpp  testPiece.h  (+9 more)
simulators/chess/legacy/Lab04.xcodeproj/: project.pbxproj
simulators/common/: placeholder_scene.cpp  placeholder_scene.h  scene_render_utils.cpp  scene_render_utils.h
simulators/howitzer/: howitzer_legacy_amalgam.cpp  howitzer_legacy_bridge.h  howitzer_legacy_gui_amalgam.cpp  howitzer_legacy_rename.h  howitzer_legacy_unrename.h  howitzer_scene.cpp  howitzer_scene.h
simulators/howitzer/legacy/: acceleration.h  angle.cpp  angle.h  howitzer.h  legacy_draw_stub.cpp  main.cpp  physics.cpp  physics.h  position.cpp  position.h  projectile.cpp  projectile.h  simulation.cpp  simulation.h  testAcceleration.h  testAngle.h  testHowitzer.h  testPhysics.h  testPosition.h  testProjectile.h  testVelocity.h  uiDraw.cpp  velocity.cpp  velocity.h
simulators/howitzer/legacy/Lab12.xcodeproj/: project.pbxproj
simulators/lander/: lander_scene.cpp  lander_scene.h
simulators/lander/legacy/: acceleration.cpp  acceleration.h  angle.cpp  angle.h  ground.cpp  ground.h  lander.cpp  lander.h  legacy_draw_stub.cpp  position.cpp  position.h  simulator.cpp  star.h  test.cpp  testAcceleration.h  testAngle.h  testLander.h  testPosition.h  testThrust.h  testVelocity.h  thrust.h  uiDraw.cpp  uiDraw.h  uiInteract.cpp  uiInteract.h  unitTest.h  velocity.cpp  velocity.h
simulators/orbital/: orbital_legacy_amalgam.cpp  orbital_legacy_bridge.h  orbital_legacy_gui_amalgam.cpp  orbital_legacy_rename.h  orbital_legacy_unrename.h  orbital_scene.cpp  orbital_scene.h
simulators/orbital/legacy/: DreamChaser.cpp  DreamChaser.h  Lab07.cpp  Lab07.vcxproj  OrbitalObject.h  acceleration.cpp  acceleration.h  angle.cpp  angle.h  dragon.cpp  dragon.h  fragment.cpp  fragment.h  gps.cpp  gps.h  hubble.cpp  hubble.h  orbital_draw_stub.cpp  part.cpp  part.h  physics.cpp  physics.h  position.cpp  position.h  projectile.cpp  projectile.h  satellite.cpp  satellite.h  sputnik.cpp  sputnik.h  star.h  starlink.cpp  starlink.h  test.cpp  testAcceleration.h  testAngle.h  testDragon.h  testDreamChaser.h  testFragment.h  testGPS.h  (+10 more)
simulators/orbital/legacy/Lab07.xcodeproj/: project.pbxproj
tests/chess/: chess_rules_tests.cpp
tests/unit/: application_tests.cpp  chess_scene_tests.cpp  control_binding_formatter_tests.cpp  engine_shell_session_tests.cpp  howitzer_scene_tests.cpp  lander_scene_tests.cpp  orbital_scene_tests.cpp  preview_storyboard_tests.cpp  runtime_controller_tests.cpp  scene_input_router_tests.cpp  scene_render_utils_tests.cpp  scene_status_formatter_tests.cpp  shell_command_catalog_tests.cpp  shell_presenter_tests.cpp  shell_text_formatter_tests.cpp  simulator_registry_tests.cpp  test_main.cpp
